# monorepo

./: .gitignore  README.org
cockroachlabs.com/university/: .gitignore  README.org  db.nix  justfile  shell.nix
houses/: README.rst  default.nix  docker-compose.yml  postcodes.txt  pyproject.toml  zoopla.http
houses/Untitled Folder/: cluster the schools.ipynb
houses/Untitled Folder/.ipynb_checkpoints/: cluster the schools-checkpoint.ipynb
houses/houses/: __main__.py  zoopla.py
houses/tests/: test_houses.py
signalpillar.io/youtube-dl-android/: README.org  buildozer.spec  justfile  main.py  shell.nix  tox.ini
