[tool.poetry]
name = "houses"
version = "0.1.0"
description = ""
authors = ["Volodymyr Vitvitskyi <contact.volodymyr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pymongo = "3.5.1"
tqdm = "^4.53.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
